@@ -27,12 +27,12 @@ package org.omegat.gui.align;
 
 import java.util.AbstractMap;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map.Entry;
 import java.util.stream.Collectors;
 
+import org.jspecify.annotations.Nullable;
 import org.omegat.util.Language;
 
 import net.loomchild.maligna.coretypes.Alignment;
@@ -53,15 +53,15 @@ class MutableBead {
     }
 
     public final float score;
-    public final List<String> sourceLines;
-    public final List<String> targetLines;
+    public final List<@Nullable String> sourceLines;
+    public final List<@Nullable String> targetLines;
     public boolean enabled;
     public MutableBead.Status status;
 
-    private MutableBead(float score, List<String> sourceLines, List<String> targetLines) {
+    private MutableBead(float score, List<@Nullable String> sourceLines, List<@Nullable String> targetLines) {
         this.score = score;
-        this.sourceLines = new ArrayList<String>(sourceLines);
-        this.targetLines = new ArrayList<String>(targetLines);
+        this.sourceLines = new ArrayList<>(sourceLines);
+        this.targetLines = new ArrayList<>(targetLines);
         boolean srcEqualsTrg = sourceLines.equals(targetLines);
         this.enabled = !srcEqualsTrg;
         this.status = srcEqualsTrg ? MutableBead.Status.ACCEPTED : MutableBead.Status.DEFAULT;
@@ -71,12 +71,12 @@ class MutableBead {
         this(alignment.getScore(), alignment.getSourceSegmentList(), alignment.getTargetSegmentList());
     }
 
-    MutableBead(List<String> sourceLines, List<String> targetLines) {
+    MutableBead(List<@Nullable String> sourceLines, List<@Nullable String> targetLines) {
         this(Float.MAX_VALUE, sourceLines, targetLines);
     }
 
     MutableBead(String source, String target) {
-        this(Arrays.asList(source), Arrays.asList(target));
+        this(List.of(source), List.of(target));
     }
 
     /**
@@ -93,8 +93,9 @@ class MutableBead {
     /**
      * Get whether or not the bead contains the same number of source and target lines.
      *
-     * @return
+     * @return true if the size is the same, otherwise false
      */
+    @SuppressWarnings("unused")
     public boolean isBalanced() {
         return sourceLines.size() == targetLines.size();
     }
@@ -102,14 +103,14 @@ class MutableBead {
     /**
      * Get whether or not the bead is entirely empty (has 0 source lines and 0 target lines).
      *
-     * @return
+     * @return true if the source and target lines are empty, otherwise false
      */
     public boolean isEmpty() {
         return sourceLines.isEmpty() && targetLines.isEmpty();
     }
 
     /**
-     * Convert a list of beads to a list of flattened (see {@link #join(Language, List)}) pairs where
+     * Convert a list of beads to a list of flattened (see {@link Util#join(Language, List)}) pairs where
      * <ol>
      * <li>key = source text
      * <li>value = target text
@@ -124,7 +125,7 @@ class MutableBead {
         return beads.stream().filter(bead -> bead.enabled).map(bead -> {
             String srcOut = bead.sourceLines.isEmpty() ? null : Util.join(srcLang, bead.sourceLines);
             String trgOut = bead.targetLines.isEmpty() ? null : Util.join(trgLang, bead.targetLines);
-            return new AbstractMap.SimpleImmutableEntry<String, String>(srcOut, trgOut);
+            return new AbstractMap.SimpleImmutableEntry<>(srcOut, trgOut);
         }).collect(Collectors.toList());
     }
 
@@ -133,7 +134,7 @@ class MutableBead {
      * the alignment, so lower scores are better. We use {@link Double#MAX_VALUE} as a sentinel for failure to
      * calculate (empty list, etc.).
      *
-     * @param beads
+     * @param beads List of beads
      * @return Average score, or {@link Double#MAX_VALUE} if incalculable
      */
     static double calculateAvgDist(List<MutableBead> beads) {
